[tool.poetry]
name = "customradio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PlexAPI = "^4.15.15"
flask = "^3.0.3"

[tool.poetry.scripts]
start = "run flask --app webserver run --host=0.0.0.0"
debug = "flask --app webserver run --host=0.0.0.0 --debug"


[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
